# shirley

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  README_PYPI.md  app.py  config.ini  environment.bat  generator.py  init.bat  install.bat  install_windows.bat  install_windows.ps1  launch.py  main.py  manage.py  pyproject.toml  requirements.txt  run.bat  shirley.py  system_prompt.txt  utils.py  webui.py
.github/workflows/: python-publish.yml
api/: settings.py  urls.py
api/users/: apps.py  serializers.py  views.py
git/etc/: package-versions.txt
modules/: augmentor.py  config.py  document_loader.py  generator.py  utils.py  vector_database.py  vector_store.py
resources/: prompt.txt
scripts/: poc.py  webui.py
shirley/: __init__.py  asgi.py  client.py  config.py  document.py  generator.py  manage.py  settings.py  types.py  urls.py  utils.py  vector_database.py  webui.py  wsgi.py
shirley/api/: asgi.py  settings.py  urls.py  wsgi.py
shirley/api/chat/: apps.py  serializers.py  views.py
shirley/api/users/: apps.py  serializers.py  views.py
shirley/clients/: __init__.py  chat.py  client.py  tts.py
shirley/components/: __init__.py  chat.py  component.py  header.py  speech.py  texttospeech.py  tts.py
shirley/core/: augmentor.py  document.py  document_loader.py  generator.py  vector_database.py
shirley/interfaces/: __init__.py  chat.py  footer.py  header.py  interface.py  tts.py
shirley/options/: __init__.py  client.py  clients.py  components.py  interfaces.py
shirley/types/: __init__.py  types.py
shirley/users/: apps.py  permissions.py  serializers.py  views.py
shirley/utils/: __init__.py  pickleablegenerator.py
static/: about.txt  custom.css
tests/: test_sample.py
