[tool.poetry]
name = "shirley"
version = "0.1.0"
description = "It intelligently chats."
authors = ["luojiahai <ljiahai@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.6"
transformers = "^4.42.4"
chromadb = "^0.5.4"
pypdf = "^4.3.1"
transformers-stream-generator = "^0.0.5"
einops = "^0.8.0"
matplotlib = "^3.9.1"
tiktoken = "^0.7.0"
django = "^5.0.7"
djangorestframework = "^3.15.2"
pytest = "^8.3.1"

[tool.poetry.scripts]
django = "shirley.manage:main"
poc = "scripts.poc:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
